Fix overflow on channel feed

--- a/web/static/web/scss/channel_feed.scss
+++ b/web/static/web/scss/channel_feed.scss
@@ -15,6 +15,8 @@
         & .primary {
             grid-area: primary;
             padding: 3em;
+            max-width: 100%;
+            overflow: hidden;
 
             > .horizontal-rule {
                 margin: 0;
@@ -194,6 +196,8 @@
         padding: 1.5em;
         border-radius: 3px;
         box-shadow: 0 1px 1px rgb(204,204,204);
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         &:hover {
             box-shadow: 0 1px 1px #888;
